Prevent bar from clipping

--- a/credit-decision-game/src/pages/budgeting/style.css
+++ b/credit-decision-game/src/pages/budgeting/style.css
@@ -57,8 +57,8 @@
   position: relative;
   background-color: white;
   height: 1rem;
-  width: 100%;
-  margin-bottom: 4rem;
+  width: 90%;
+  margin: 0 auto 4rem auto;
 }
 
 .bar__inner {
